--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -99,8 +99,12 @@
             <label>Phone:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.phone" type="text" name="center_phone" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhone()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14">
+            <!-- <input ng-model="$ctrl.phone" type="text" name="center_phone" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhone()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14"> -->
             <!-- <p ng-show="$ctrl.editCenter.center_phone.$error.pattern || $ctrl.editCenter.center_phone.$error.minlength || $ctrl.editCenter.center_phone.$error.maxlength" class="help-block">Invalid US number.</p> -->
+            <!-- <p ng-show="$ctrl.editCenter.center_phone.$error.required" class="help-block">Required</p> -->
+
+            <input placeholder="eg. (601) 521-1542" name="center_phone" ng-change="$ctrl.testPhone()" class="form-control required" number="true" type="text" required="true" phone-input restrict="reject" maxlength="14" ng-model="$ctrl.phone">
+            <p ng-show="$ctrl.editCenter.center_phone.$error.pattern || $ctrl.editCenter.center_phone.$error.maxlength || ($ctrl.phone.length<10 && $ctrl.phone.length>0) " class="help-block">Invalid US number.</p>
             <p ng-show="$ctrl.editCenter.center_phone.$error.required" class="help-block">Required</p>
           </div>
         </div>
@@ -215,8 +219,8 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn adn-btn right" ng-disabled="$ctrl.editCenter.center_name.$invalid ||  $ctrl.editCenter.center_web_link.$invalid || $ctrl.editCenter.center_zip.$invalid ||  $ctrl.editCenter.center_phone.$invalid ||
-            $ctrl.editCenter.description.$error.required || $ctrl.editCenter.city.$error.required || $ctrl.editCenter.state.$error.required || $ctrl.editCenter.center_facility.$invalid || $ctrl.editCenter.center_approach.$invalid || $ctrl.editCenter.center_philosophy.$invalid || ($ctrl.multiselectModelCategories.length === 0) || ($ctrl.zipFound === 0)">Submit</button>
+            <button type="submit" class="btn adn-btn right" ng-disabled="$ctrl.editCenter.center_name.$invalid ||  $ctrl.editCenter.center_web_link.$invalid || $ctrl.editCenter.center_zip.$invalid || $root.center_phone===0 ||
+            $ctrl.editCenter.description.$error.required || $ctrl.editCenter.city.$error.required || $ctrl.editCenter.state.$error.required || $ctrl.editCenter.center_facility.$invalid || $ctrl.editCenter.center_approach.$invalid || $ctrl.editCenter.center_philosophy.$invalid || $ctrl.multiselectModelCategories.length === 0 || ($ctrl.zipFound === 0)">Submit</button>
           </div>
         </div>
       </form>
