--- a/app/myProfile/sponsoredAdsStateSelect/view.html
+++ b/app/myProfile/sponsoredAdsStateSelect/view.html
@@ -10,7 +10,7 @@
   </div>
   <div class="col-sm-12 steps_sponsored">Select State: </div>
   <div class="additional_filters">
-    <div class="col-sm-12 margin_bottom_state">
+    <div class="col-sm-12">
       <input type="checkbox" name="" ng-model="$root.checkedAllStates" ng-change="$ctrl.selectStateAll()" ng-init="$ctrl.checkAllText=' Select all states'" /> {{$ctrl.checkAllText}}
     </div>
   </div>
