--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -4,8 +4,8 @@
 
   <!-- Actual sponsor listing data -->
   <div ng-hide="$ctrl.displayError" class="sponsor-listing">
-    <section-heading>{{ $ctrl.entry.heading_1 }}</section-heading>
-    <p>{{ $ctrl.entry.content_1 }}</p>
+    <section-heading>{{ $ctrl.entry.heading_1 | removeHTMLTags }}</section-heading>
+    <p>{{ $ctrl.entry.content_1 | removeHTMLTags }}</p>
 
     <div class="row">
       <!-- First section of the listing -->
@@ -21,10 +21,10 @@
               <div class="sponsor_img" style="width:65%;">
                 <h3>
                   <a ng-href="{{ listing.website | urlFilter }}" target="_blank">
-                    {{ listing.name }}
+                    {{ listing.name | removeHTMLTags }}
                   </a>
                 </h3>
-                <p>{{ listing.description }}</p>
+                <p>{{ listing.description | removeHTMLTags }}</p>
               </div>
             </div>
           </li>
@@ -34,7 +34,7 @@
       <!-- Second section of the listing-->
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
         <section-heading>{{ $ctrl.entry.heading_2 }}</section-heading>
-        <p>{{ $ctrl.entry.content_2 }}</p>
+        <p>{{ $ctrl.entry.content_2 | removeHTMLTags }}</p>
       </div>
 
     </div>
