--- a/app/header/view.html
+++ b/app/header/view.html
@@ -31,14 +31,16 @@
       <a class="hdr_logo_div " href="/">
         <img class="img-responsive " src="themes/addiction/images/addiction_logo.png" />
       </a>
-      <button type="button" class="navbar-toggle toggle_button" data-toggle="collapse" data-target=".navbar-collapse">
+       <!--<button type="button" class="navbar-toggle toggle_button" data-toggle="collapse" data-target=".navbar-collapse">-->
+       <button type="button" class="navbar-toggle toggle_button" ng-init="isCollapsed = true" ng-click="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
     </div>
-    <div class="navbar-collapse collapse to_be_pull_left new_class_for_collaspe ">
+    <!--<div class="navbar-collapse collapse to_be_pull_left new_class_for_collaspe ">-->
+    <div class="navbar-collapse to_be_pull_left new_class_for_collaspe" ng-class="{collapse: isCollapsed}">
       <!-- Social Links -->
       <ul class="social_ul">
         <li ng-repeat="socialLink in $ctrl.socialLinks">
