--- a/app/index.html
+++ b/app/index.html
@@ -185,6 +185,7 @@
         s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <base href="/" />
   </head>
 
   <body ng-click="$event.stopPropagation()">
