--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -19,13 +19,14 @@
   <div class="additional_filters">
     <div class="col-sm-12">
       <div class="col-sm-3">
-        <div ng-dropdown-multiselect="" id="demographic" options="$root.demographic" translation-texts="$ctrl.buttonTxtDemographic" selected-model="$root.demographicModel" extra-settings="$ctrl.demographic" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
+        <div ng-dropdown-multiselect="" id="demographic" options="$root.demographic" selected-model="$root.demographicModel" extra-settings="$ctrl.demographic" translation-texts="$ctrl.buttonTxtDemographic" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true">
+        </div>
       </div>
       <div class="col-sm-3">
         <div ng-dropdown-multiselect="" id="treatmentApproach" options="$root.treatmentApproach" translation-texts="$ctrl.buttonTxtTreatmentApproach" selected-model="$root.treatmentApproachModel" extra-settings="$ctrl.treatment" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
       </div>
       <div class="col-sm-3">
-        <div ng-dropdown-multiselect="" id="payment" options="$root.payment" selected-model="$root.paymentModel" translation-texts="$ctrl.buttonTxtPayment" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
+        <div ng-dropdown-multiselect="" id="payment" options="$root.payment" selected-model="$root.paymentModel" translation-texts="$ctrl.buttonTxtPayment" extra-settings="$ctrl.payment" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
       </div>
       <div style="margin-bottom:30%;"></div>
     </div>
@@ -37,7 +38,7 @@
         <div ng-dropdown-multiselect="" id="setting" options="$root.setting" translation-texts="$ctrl.buttonTxtSetting" selected-model="$root.settingModel" extra-settings="$ctrl.settings" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
       </div>
       <div class="col-sm-4">
-        <div ng-dropdown-multiselect="" id="byDrug" options="$root.byDrug" selected-model="$root.byDrugModel" translation-texts="$ctrl.buttonTxtByDrug" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
+        <div ng-dropdown-multiselect="" id="byDrug" options="$root.byDrug" selected-model="$root.byDrugModel" translation-texts="$ctrl.buttonTxtByDrug" extra-settings="$ctrl.byDrug" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
       </div>
     </div>
   </div>
