--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -1,6 +1,7 @@
 <!-- <section-heading>Select State</section-heading> -->
 <!--- Map content  Start   -->
-<div class="col-sm-12 steps_sponsored">Step1: Click on the map to select state, county and city</div>
+<div class="col-sm-12 steps_sponsored">Step1: Click on the map to select state, county and city Or {{$ctrl.checkAllText}}
+  <input type="checkbox" name="" ng-model="$root.checkedAllStates" ng-change="$ctrl.selectStateAll()" ng-init="$ctrl.checkAllText=' Select all states'" /> </div>
 <div onselectstart="return false;" class="unselectable col-sm-12">
   <div id="mapwrapper" class="col-sm-12">
     <div id="map_base">
@@ -12,7 +13,7 @@
   <div class="additional_filters">
     <div class="col-sm-12">
       <!-- <div ng-dropdown-multiselect="" id="statesSelect" options="$root.allStates" translation-texts="$ctrl.stateSelectText" selected-model="$root.stateSelectModel" extra-settings="$ctrl.stateSelectSetting" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart, onSelectAll: $ctrl.updateCart, onDeselectAll:$ctrl.updateCart}" checkboxes="true"></div> -->
-      <input type="checkbox" name="" ng-model="$root.checkedAllStates" ng-change="$ctrl.selectStateAll()" ng-init="$ctrl.checkAllText=' Select all states'" /> {{$ctrl.checkAllText}}
+      <!-- <input type="checkbox" name="" ng-model="$root.checkedAllStates" ng-change="$ctrl.selectStateAll()" ng-init="$ctrl.checkAllText=' Select all states'" /> {{$ctrl.checkAllText}} -->
     </div>
   </div>
   <div class="col-sm-12 steps_sponsored step2">Step2: Select various categories for your treatment center</div>
