--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,6 @@
     <link rel="alternate" type="application/rss+xml" title="Addiction Network &raquo; Feed" href="http://www.addictionnetwork.com/feed/" />
     <link rel="alternate" type="application/rss+xml" title="Addiction Network &raquo; Comments Feed" href="http://www.addictionnetwork.com/comments/feed/" />
     <link rel="alternate" type="application/rss+xml" title="Addiction Network &raquo; sponsorhome Comments Feed" href="http://www.addictionnetwork.com/sponsorhome/feed/" />
-
     <style type="text/css">
       img.emoji,
       img.wp-smiley {
@@ -48,6 +47,9 @@
     <link rel=" stylesheet" id=" genericons-css" href=" themes/addiction/genericons/genericons.css?ver=3.0.2" type=" text/css" media=" all" />
     <!-- <link rel=" stylesheet" id=" tthemes/addiction/js/jquery.jswentyfourteen-style-css" href=" themes/addiction/style.css?ver=4.6.3" type=" text/css" media=" all" /> -->
     <!--[if lt IE 9]> <link rel=" stylesheet" id=" twentyfourteen-ie-css" href=" themes/addiction/css/ie.css?ver=20131205" type=" text/css" media=" all" /> <![endif]-->
+    <script src=" js/jquery/jquery.js?ver=1.12.4"></script>
+    <script src="js/jquery/jquery-migrate.min.js?ver=1.4.1"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-sanitize.js"></script>
     <script src="plugins/google-analyticator/external-tracking.min.js?ver=6.4.9"></script>
     <link rel="https://api.w.org/" href="http://www.addictionnetwork.com/wp-json/" />
     <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.addictionnetwork.com/xmlrpc.php?rsd" />
@@ -96,6 +98,7 @@
   <body ng-click="$event.stopPropagation()">
     <!-- First and second navigation -->
     <header></header>
+    <!--    Sign In    -->
     <status-view></status-view>
     <!-- Middle Content-->
     <div class="middle_content_div" ng-controller="advertisementCtrl">
@@ -103,6 +106,13 @@
     </div>
     <!-- End Middle Content-->
 
+    <script>
+      $('.dropdown').hover(function () {
+        $(this).find('.dropdown-menu').first().stop(true, true).slideDown(150);
+      }, function () {
+        $(this).find('.dropdown-menu').first().stop(true, true).slideUp(105)
+      });
+    </script>
 
     <!-- Start footer-->
     <footer></footer>
