--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,8 @@
     <link rel=" stylesheet" id=" genericons-css" href=" themes/addiction/genericons/genericons.css?ver=3.0.2" type=" text/css" media=" all" />
     <!-- <link rel=" stylesheet" id=" tthemes/addiction/js/jquery.jswentyfourteen-style-css" href=" themes/addiction/style.css?ver=4.6.3" type=" text/css" media=" all" /> -->
     <!--[if lt IE 9]> <link rel=" stylesheet" id=" twentyfourteen-ie-css" href=" themes/addiction/css/ie.css?ver=20131205" type=" text/css" media=" all" /> <![endif]-->
-    <script src=" js/jquery/jquery.js?ver=1.12.4"></script>
-    <script src="js/jquery/jquery-migrate.min.js?ver=1.4.1"></script>
+    <script src="/js/jquery/jquery.js?ver=1.12.4"></script>
+    <script src="/js/jquery/jquery-migrate.min.js?ver=1.4.1"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-sanitize.js"></script>
     <script src="plugins/google-analyticator/external-tracking.min.js?ver=6.4.9"></script>
     <link rel="https://api.w.org/" href="http://www.addictionnetwork.com/wp-json/" />
