added comment box

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
     <!--[if lt IE 9]> <link rel=" stylesheet" id=" twentyfourteen-ie-css" href=" themes/addiction/css/ie.css?ver=20131205" type=" text/css" media=" all" /> <![endif]-->
     <script src="/js/jquery/jquery.js?ver=1.12.4"></script>
     <script src="/js/jquery/jquery-migrate.min.js?ver=1.4.1"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-sanitize.js"></script>
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-sanitize.js"></script> -->
     <script src="plugins/google-analyticator/external-tracking.min.js?ver=6.4.9"></script>
     <link rel="https://api.w.org/" href="http://www.addictionnetwork.com/wp-json/" />
     <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.addictionnetwork.com/xmlrpc.php?rsd" />
