fixed popup on sponsored page

--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -1,6 +1,6 @@
 <!-- <section-heading>Select State</section-heading> -->
 <!--- Map content  Start   -->
-<div class="col-sm-12 steps_sponsored">Step1: Click on the map to select state, county and city Or {{$ctrl.checkAllText}}
+<div class="col-sm-12 steps_sponsored">Step1: Click on the map to select state, county and city or <b>{{$ctrl.checkAllText}}</b>
   <input type="checkbox" name="" ng-model="$root.checkedAllStates" ng-change="$ctrl.selectStateAll()" ng-init="$ctrl.checkAllText=' Select all states'" /> </div>
 <div onselectstart="return false;" class="unselectable col-sm-12">
   <div id="mapwrapper" class="col-sm-12">
