added membership type in sponsored pages

--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -116,6 +116,13 @@
       <td>${{$ctrl.byDrugTotal}}</td>
     </tr>
     <tr>
+      <td>
+        <span class="pull-left">{{$ctrl.membershipTypeText}}</span>
+      </td>
+      <td>&nbsp;</td>
+      <td>${{$ctrl.totalExtra}}</td>
+    </tr>
+    <tr>
       <td colspan="3">
         <span class="pull-right">
           <h4>
