memebership type changes

--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -190,6 +190,14 @@
             <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
+          <tr>
+            <td>Actual link to your website</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
           <tr class="tr-background">
             <td class="feature-label">Banner Ads</td>
             <td></td>
