--- a/app/addListing/centerDetails/view.html
+++ b/app/addListing/centerDetails/view.html
@@ -40,6 +40,16 @@
         <img id="logo_preview" ng-src="{{$ctrl.preview_img}}" width="100" name="logo_preview" />
       </div>
     </div>
+    <div class="adn-row">
+      <div class="col-md-4 col-sm-4 col-xs-12">
+        <label for="web_link">Treatment center added:</label>
+      </div>
+      <div class="col-md-8 col-sm-8 col-xs-12">
+        <span ng-repeat="center in $root.centerAdded track by $index" ng-init="$ctrl.total=0">{{center}}, </span>
+
+        <span> {{$root.centerPrice}} * {{$root.centerAdded.length}} = ${{$root.centerAdded.length * $root.centerPrice}}</span>
+      </div>
+    </div>
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
       <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
       <input class="btn modal_btn btn_size pull-right" value="Next" id="submit" type="button" ng-click="$root.submit()" ng-disabled="$root.addlistForm.content_1.$error.required || $root.addlistForm.content_2.$error.required || $root.addlistForm.content_3.$error.required">
