--- a/app/login/view.html
+++ b/app/login/view.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 pading_0">
           <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
-            <label>Username
+            <label>Email
               <em class="em_star">*</em>
             </label>
             <input placeholder="Email" id="email" name="email" class="form-control required" type="email" ng-model="$ctrl.email" required="true">
