--- a/app/myProfile/bannerAds/view.html
+++ b/app/myProfile/bannerAds/view.html
@@ -3,9 +3,10 @@
   <div class="profile-content">
     <div class="profile-row">
       <a ui-sref="myProfile.bannerAdsAdd">
-        <span class="btn adn-btn right">Add Banner Ad</span>
+        <span class="btn adn-btn right">Add Banner Ads</span>
       </a>
     </div>
+    <div class="no_banner_ads" ng-if="$ctrl.advertisement.banner_ads.length===0">Sorry, you have no banner ads</div>
     <div class="profile-row">
       <div class="adn-table">
         <div id="no-more-tables">
@@ -15,6 +16,7 @@
                 <th>Image</th>
                 <th>Name</th>
                 <th>Position</th>
+                <th>Link</th>
                 <th class="width_adjust_tb">Action</th>
               </tr>
             </thead>
@@ -30,6 +32,7 @@
                 <td>{{list.name}}</td>
                 <td data-title="Name"><a href="javascript:;" style="color:black;">{{list.position}}</a>
                 </td>
+                <td>{{list.center_web_link}}</td>
                 <td data-title="Action">
                   <a href="/#/my-profile/banner-ads/view-banner/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="View"><i class="glyphicon glyphicon-eye-open"></i></a>
                   <a href="/#/my-profile/banner-ads/edit-banner/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="Edit"><i class="glyphicon glyphicon-edit"></i></a>
