--- a/app/myProfile/upgradeAccount/view.html
+++ b/app/myProfile/upgradeAccount/view.html
@@ -54,7 +54,6 @@
                 <td class="feature-label">Contact Details</td>
                 <td></td>
                 <td class=""></td>
-                <td></td>
               </tr>
               <tr>
                 <td>Email Display</td>
@@ -146,6 +145,12 @@
               </tr>
               <tr>
                 <td>Social links to Instagram</td>
+                <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+                <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
+                </td>
+              </tr>
+              <tr>
+                <td>Actual link to your website</td>
                 <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
                 <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
                 </td>
