--- a/app/myProfile/bannerAds/add/view.html
+++ b/app/myProfile/bannerAds/add/view.html
@@ -38,13 +38,14 @@
         <!-- Content -->
         <div class="adn-row">
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="upload_img">Content</label>
+            <label for="upload_img">Image</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
             <!--  <input name="image" id="image" class="span2 text_file center_image" ng-model="$ctrl.image" type="file"> -->
-            <input file-model="$ctrl.content" type="file" name="content" id="content" onchange="angular.element(this).scope().imagePreview(this)" class="center_image" accept="image/*" />
+            <input ng-model="$ctrl.content" file-model="$ctrl.content" type="file" name="content" required="true" id="content" onchange="angular.element(this).scope().imagePreview(this)" class="center_image" accept="image/*" />
             <img id="logo_preview" ng-src="{{$ctrl.preview_img}}" width="100" name="logo_preview" />
             <p ng-show="$ctrl.err_type" class="help-block">Please upload an image only. </p>
+            <p ng-show="advertisementForm.content.$error.required" class="help-block">Please select image.</p>
           </div>
         </div>
         <!-- Website link -->
@@ -61,7 +62,7 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn adn-btn right" ng-disabled="advertisementForm.position.$invalid || advertisementForm.center_web_link.$invalid ||  advertisementForm.name.$invalid">Submit</button>
+            <button type="submit" class="btn adn-btn right" ng-disabled="advertisementForm.position.$invalid || advertisementForm.center_web_link.$invalid ||  advertisementForm.name.$invalid || advertisementForm.content.$invalid">Submit</button>
           </div>
         </div>
       </form>
