fixed treatment center in my profile

--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -40,7 +40,7 @@
             <label>Website Link:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.center_web_link" name="center_web_link" type="text" class="form-control required url" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([a-z 0-9]{2,20})?(?:[\.])+([a-z/.]{2,10})$/" placeholder="http://www.google.com" />
+            <input ng-model="$ctrl.center_web_link" name="center_web_link" type="text" class="form-control required url" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([a-z 0-9]{2,20})?(?:[\.])+([a-z/.]{2,10})$/" placeholder="www.google.com" />
             <p ng-show="$ctrl.editCenter.center_web_link.$invalid" class="help-block ng-hide">Invalid Format(Correct format: www.google.com)</p>
           </div>
         </div>
