--- a/app/myProfile/addTreatmentCenter/view.html
+++ b/app/myProfile/addTreatmentCenter/view.html
@@ -19,7 +19,7 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
             <div ng-dropdown-multiselect="" options="$ctrl.treatmentCenterCategories" checkboxes="true" selected-model="$ctrl.multiselectModelCategories" extra-settings="$ctrl.multiselectModelSettings"></div>
-            <span ng-show="$ctrl.multiselectModelCategories.length === 0" class="help-block">Required</span>
+            <p ng-show="$ctrl.multiselectModelCategories.length === 0" class="help-block">Required</p>
           </div>
         </div>
 
@@ -30,7 +30,7 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
             <input ng-model="$ctrl.center_name" name="center_name" type="text" class="form-control required" required="true" placeholder="Treatment Center Name" />
-            <span ng-show="$ctrl.addCenter.center_name.$invalid" class="help-block">Required</span>
+            <p ng-show="$ctrl.addCenter.center_name.$invalid" class="help-block">Required</p>
           </div>
         </div>
 
@@ -40,8 +40,8 @@
             <label>Website Link:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.center_web_link" ng-init="$ctrl.center_web_link=''" name="center_web_link" type="text" class="form-control required url" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([a-z 0-9]{2,20})?(?:[\.])+([a-z/.]{2,10})$/" placeholder="http://www.google.com" />
-            <p ng-show="$ctrl.addCenter.center_web_link.$invalid" class="help-block ng-hide">Invalid Format(Correct format: www.google.com)</p>
+            <input ng-model="$ctrl.center_web_link" ng-init="$ctrl.center_web_link=''" name="center_web_link" type="text" class="form-control required url" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([a-z 0-9]{2,20})?(?:[\.])+([a-z/.]{2,10})$/" placeholder="www.google.com" />
+            <p ng-show="$ctrl.addCenter.center_web_link.$invalid" class="help-block">Invalid Format(Correct format: www.google.com)</p>
           </div>
         </div>
 
@@ -52,7 +52,7 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
             <state-select on-update="$ctrl.onStateUpdate(selected)"></state-select>
-            <p ng-show="$ctrl.addCenter.state.$invalid">Required</p>
+            <p ng-show="$ctrl.addCenter.state.$invalid" class="help-block ng-hide">Required</p>
           </div>
         </div>
 
@@ -65,7 +65,7 @@
               <option value="">Select City</option>
               <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities}}">{{cities}}</option>
             </select>
-            <p ng-show="$ctrl.addCenter.city.$invalid">Required</p>
+            <p class="help-block" ng-show="$ctrl.addCenter.city.$invalid">Required</p>
           </div>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="col-md-8 col-sm-8 col-xs-12">
             <input ng-model="$ctrl.address_line_1" name="address_line_1" type="text" class="form-control required" required="true" placeholder="" />
             <input type="hidden" name="centerapprove" value="0" />
-            <p ng-show="$ctrl.addCenter.address_line_1.$invalid">Required</p>
+            <p class="help-block" ng-show="$ctrl.addCenter.address_line_1.$invalid">Required</p>
           </div>
         </div>
 
@@ -88,8 +88,8 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
             <input ng-model="$ctrl.pincode" type="text" name="center_zip" ng-change="$ctrl.testZip()" class="form-control required" number="true" minlength="5" maxlength="5" ng-pattern="/^\d{5}$/" required="true" placeholder="14100" />
-            <span ng-show="$ctrl.addCenter.center_zip.$invalid" class="help-block">Required and Zip code must be 5 digits</span>
-            <span ng-if="($ctrl.zipFound===0 && $ctrl.addCenter.center_zip.$valid)" class="help-block">Invalid zip, doesn't match with selected state.</span>
+            <p ng-show="$ctrl.addCenter.center_zip.$invalid" class="help-block">Required and Zip code must be 5 digits</p>
+            <p class="help-block" ng-if="($ctrl.zipFound===0 && $ctrl.addCenter.center_zip.$valid)">Invalid zip, doesn't match with selected state.</p>
           </div>
         </div>
 
@@ -127,8 +127,8 @@
                 <input file-model="$ctrl.listing_image" type="file" name="center_image" onchange="angular.element(this).scope().imagePreview(this)" class="center_image" />
                 <img id="logo_preview" ng-src="{{$ctrl.preview_img}}" width="100" name="logo_preview" />
               </a>
-              <span ng-show="$ctrl.err_type===1" style="float:left;">Please upload an image with exact size of 308*180 KB.
-              </span>
+              <p class="help-block" ng-show="$ctrl.err_type===1" style="float:left;">Please upload an image with exact size of 308*180 KB.
+              </p>
             </div>
           </div>
         </div>
@@ -139,19 +139,19 @@
             <label>Description:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <textarea ng-model="$ctrl.content_1" name="center_description" rows="3" cols="100%" class="form-control required" required="" placeholder=""></textarea>
-            <p ng-show="$ctrl.addCenter.center_description.$error.required">Required</p>
+            <textarea ng-model="$ctrl.description" name="description" rows="3" cols="100%" class="form-control required" required="" placeholder="Brief description (Upto 50 words max)" maxlength="50"></textarea>
+            <p class="help-block" ng-show="$ctrl.addCenter.description.$error.required">Required</p>
           </div>
         </div>
 
         <!-- About  Facility content_2 -->
         <div class="adn-row">
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <label>About Facility:</label>
+            <label>Overview of Program:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <textarea ng-model="$ctrl.content_2" name="center_facility" rows="3" cols="100%" class="form-control required" required="" placeholder=""></textarea>
-            <p ng-show="$ctrl.addCenter.center_facility.$error.required">Required</p>
+            <textarea ng-model="$ctrl.content_1" name="content_1" rows="3" cols="100%" class="form-control required" required="" placeholder="Overview of Program"></textarea>
+            <p class="help-block" ng-show="$ctrl.addCenter.content_1.$error.required">Required</p>
           </div>
         </div>
 
@@ -161,8 +161,8 @@
             <label>Treatment Approach:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <textarea ng-model="$ctrl.content_3" name="center_approach" rows="3" cols="100%" class="form-control required" required="true" placeholder=""></textarea>
-            <p ng-show="$ctrl.addCenter.center_approach.$error.required">Required</p>
+            <textarea ng-model="$ctrl.content_2" name="content_2" rows="3" cols="100%" class="form-control required" required="true" placeholder="Treatment Approach"></textarea>
+            <p class="help-block" ng-show="$ctrl.addCenter.content_2.$error.required">Required</p>
           </div>
         </div>
 
@@ -172,8 +172,8 @@
             <label>Unique Selling Points:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <textarea ng-model="$ctrl.content_4" name="center_philosophy" required="true" rows="3" cols="100%" class="form-control required" placeholder=""></textarea>
-            <p ng-show="$ctrl.addCenter.center_philosophy.$error.required">Required</p>
+            <textarea ng-model="$ctrl.content_3" name="content_3" required="true" rows="3" cols="100%" class="form-control required" placeholder="Unique Selling Points"></textarea>
+            <p class="help-block" ng-show="$ctrl.addCenter.content_3.$error.required">Required</p>
           </div>
         </div>
 
@@ -195,7 +195,7 @@
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
             <button type="submit" ng-click="$ctrl.submit()" class="btn adn-btn right" ng-disabled="$ctrl.addCenter.center_name.$invalid ||  $ctrl.addCenter.center_web_link.$invalid || $ctrl.addCenter.center_zip.$invalid ||  $ctrl.addCenter.center_phone.$invalid ||
-            $ctrl.addCenter.center_description.$error.required || $ctrl.addCenter.city.$error.required || $ctrl.addCenter.state.$error.required || $ctrl.addCenter.center_facility.$invalid || $ctrl.addCenter.center_approach.$invalid || $ctrl.addCenter.center_philosophy.$invalid || $ctrl.addCenter.address_line_1.$invalid || $ctrl.addCenter.center_email.$invalid || ($ctrl.multiselectModelCategories.length === 0) || ($ctrl.zipFound === 0)">Submit</button>
+            $ctrl.addCenter.description.$error.required || $ctrl.addCenter.city.$error.required || $ctrl.addCenter.state.$error.required || $ctrl.addCenter.content_1.$invalid || $ctrl.addCenter.content_2.$invalid || $ctrl.addCenter.content_3.$invalid || $ctrl.addCenter.address_line_1.$invalid || $ctrl.addCenter.center_email.$invalid || ($ctrl.multiselectModelCategories.length === 0) || ($ctrl.zipFound === 0)">Submit</button>
           </div>
         </div>
       </form>
